Overflow Bug

--- a/friends/src/components/App.scss
+++ b/friends/src/components/App.scss
@@ -1,5 +1,6 @@
 body{
   background-color: #282c34;
+  padding: 0 !important;
 }
 a{
   color:black;
